--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.8",
     "web-vitals": "^2.1.4"
   },
